SMG2 Merge: replace get(0) with getFirst()